// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a banner with a primary 'learning' action when the type is 'notice' 1`] = `
<div>
  <div
    class="banner notice"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper noticeIcon"
      >
        <svg
          data-testid="info"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8C12.5523 8 13 7.5523 13 7C13 6.4477 12.5523 6 12 6C11.4477 6 11 6.4477 11 7C11 7.5523 11.4477 8 12 8Z"
            style="fill: var(--color-surface);"
          />
          <path
            d="M14.5 15H13V10C13 9.4477 12.5523 9 12 9L10 9C9.44772 9 9 9.4477 9 10C9 10.5523 9.44772 11 10 11L11 11V15H9.5C8.94772 15 8.5 15.4477 8.5 16C8.5 16.5523 8.94772 17 9.5 17H14.5C15.0523 17 15.5 16.5523 15.5 16C15.5 15.4477 15.0523 15 14.5 15Z"
            style="fill: var(--color-surface);"
          />
          <path
            d="M2 12C2 6.4772 6.4772 2 12 2C17.5229 2 22 6.4772 22 12C22 17.5229 17.5228 22 12 22C6.4772 22 2 17.5228 2 12ZM4 12C4 16.4183 7.5817 20 12 20C16.4183 20 20 16.4183 20 12C20 7.5817 16.4183 4 12 4C7.5817 4 4 7.5817 4 12Z"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Bruce
        </p>
      </div>
      <div
        class="bannerAction"
      >
        <button
          class="button small subtle primary buttonChildren"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            smash me
          </span>
        </button>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a banner with a primary action 1`] = `
<div>
  <div
    class="banner success"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper successIcon"
      >
        <svg
          data-testid="checkmark"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Bruce
        </p>
      </div>
      <div
        class="bannerAction"
      >
        <button
          class="button small subtle primary buttonChildren"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            smash me
          </span>
        </button>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a notice banner 1`] = `
<div>
  <div
    class="banner notice"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper noticeIcon"
      >
        <svg
          data-testid="info"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8C12.5523 8 13 7.5523 13 7C13 6.4477 12.5523 6 12 6C11.4477 6 11 6.4477 11 7C11 7.5523 11.4477 8 12 8Z"
            style="fill: var(--color-surface);"
          />
          <path
            d="M14.5 15H13V10C13 9.4477 12.5523 9 12 9L10 9C9.44772 9 9 9.4477 9 10C9 10.5523 9.44772 11 10 11L11 11V15H9.5C8.94772 15 8.5 15.4477 8.5 16C8.5 16.5523 8.94772 17 9.5 17H14.5C15.0523 17 15.5 16.5523 15.5 16C15.5 15.4477 15.0523 15 14.5 15Z"
            style="fill: var(--color-surface);"
          />
          <path
            d="M2 12C2 6.4772 6.4772 2 12 2C17.5229 2 22 6.4772 22 12C22 17.5229 17.5228 22 12 22C6.4772 22 2 17.5228 2 12ZM4 12C4 16.4183 7.5817 20 12 20C16.4183 20 20 16.4183 20 12C20 7.5817 16.4183 4 12 4C7.5817 4 4 7.5817 4 12Z"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Notice me
        </p>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a success banner 1`] = `
<div>
  <div
    class="banner success"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper successIcon"
      >
        <svg
          data-testid="checkmark"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Success
        </p>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a warning banner 1`] = `
<div>
  <div
    class="banner warning"
    role="status"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper warningIcon"
      >
        <svg
          data-testid="warning"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 9C11 8.44772 11.4477 8 12 8C12.5523 8 13 8.44772 13 9V13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13V9Z"
            style="fill: var(--color-surface);"
          />
          <path
            d="M12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15Z"
            style="fill: var(--color-surface);"
          />
          <path
            d="M12.8314 2.48522C12.6631 2.18562 12.345 2 12 2C11.655 2 11.3369 2.18562 11.1686 2.48522L2.12101 18.5905C1.95619 18.8839 1.95997 19.2422 2.13095 19.532C2.30193 19.8219 2.61451 20 2.95238 20H21.0476C21.3855 20 21.6981 19.8219 21.8691 19.532C22.04 19.2422 22.0438 18.8839 21.879 18.5905L12.8314 2.48522ZM12 4.88941L19 18H5L12 4.88941Z"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Warn
        </p>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders an error banner 1`] = `
<div>
  <div
    class="banner error"
    role="alert"
  >
    <div
      class="bannerContent"
    >
      <span
        class="iconWrapper errorIcon"
      >
        <svg
          data-testid="alert"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 16px; height: 16px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7a1 1 0 0 0-1 1v5a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1Zm-1 10a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"
            style="fill: var(--color-surface);"
          />
          <path
            d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-2 0a8 8 0 1 0-16 0 8 8 0 0 0 16 0Z"
            style="fill: var(--color-surface);"
          />
        </svg>
      </span>
      <div
        class="bannerChildren"
      >
        <p
          class="base regular base text"
        >
          Something went wrong
        </p>
      </div>
    </div>
    <div
      class="closeButton"
    >
      <button
        aria-label="Dismiss notification"
        class="button base subtle tertiary buttonChildren"
        type="button"
      >
        <svg
          data-testid="remove"
          style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 10.586 6.707 5.293a1 1 0 0 0-1.414 1.414L10.586 12l-5.293 5.293a1 1 0 0 0 1.414 1.414L12 13.414l5.293 5.293a1 1 0 0 0 1.414-1.414L13.414 12l5.293-5.293a1 1 0 1 0-1.414-1.414L12 10.586Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
